Added functioning profession pages, dark mode, languages (NOT WORKING YET) and edited some images

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -1,1 +1,17 @@
 // app global css in SCSS form
+
+body.dark-transition,
+body.dark-transition *,
+body.dark-transition *::before,
+body.dark-transition *::after {
+  transition:
+    background-color 0.5s ease,
+    color 0.5s ease,
+    border-color 0.5s ease,
+    box-shadow 0.5s ease !important;
+}
+
+body.body--dark .social-img[alt='X'] {
+  filter: brightness(0) invert(1);
+  transition: filter 0.5s ease;
+}
